Toggle UI and Alignment fixed, Add new function check

--- a/components/base/custom.css
+++ b/components/base/custom.css
@@ -143,6 +143,86 @@ dl + dl{
     border-radius:5px;
     display: inline-block;
 }
+
+/* BOOTSTRAP SWITCH CSS for YES AND NO */
+/* .checkbox label .toggle,
+.checkbox-inline .toggle {
+	margin-left: -20px;
+	margin-right: 5px;
+} */
+
+.toggle {
+	position: relative;
+	overflow: hidden;
+}
+.toggle input[type="checkbox"] {
+	display: none;
+}
+.toggle .toggle-group {
+	position: absolute;
+	width: 200%;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	transition: left 0.35s;
+	-webkit-transition: left 0.35s;
+	-moz-user-select: none;
+    -webkit-user-select: none;
+    font-size: 13px;
+}
+.toggle-group .toggle-on, .toggle-group .toggle-off{
+    font-size: 12px;
+} 
+.toggle.off .toggle-group {
+	left: -100%;
+}
+.toggle-on {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 50%;
+	margin: 0;
+	border: 0;
+    border-radius: 0;
+    background-color:#6fbb47 !important;
+    border-color: #6fbb47 !important;
+}
+.toggle-off {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 50%;
+	right: 0;
+	margin: 0;
+	border: 0;
+	border-radius: 0;
+}
+.toggle-handle {
+	position: relative;
+	margin: 0 auto;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	height: 100%;
+	width: 0px;
+	border-width: 0 1px;
+}
+.toggle-handle.btn-default {
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+}
+
+.toggle.ios, .toggle-on.ios, .toggle-off.ios { border-radius: 20px; }
+.toggle.ios .toggle-handle { border-radius: 20px; }
+.toggle.btn { min-width: 59px; min-height: 34px; }
+.toggle-on.btn { padding-right: 24px; }
+.toggle-off.btn { padding-left: 24px; }
+/* .toggle.ios{
+    width: 50px !important;
+    height: 34px !important;
+} */
+
 @media (max-width:768px){
     .four-boxes .panel .border-section{
         margin-bottom:15px
